# chombo-discharge

./: .buildinfo  .clang-format  .clang-tidy  .codespellignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AdvectionDiffusion.sh  BoundingVolumes.sh  CITATION  CITATION.cff  CLAUDE.md  CheckDocs.py  Copyright.txt  Doxyfile  Driver.sh  FormatInputFiles.sh  GNUmakefile  LB.txt  LICENSE  README  README.md  README.rst  REUSE.toml  RULES.md  TODO.md  VectorizationInstructions.txt  VectorizationReport.txt  ZZReferences.html  amr_mesh.sh  bolsiglog.txt  box_if.sh  boxtype.sh  build.py  build_miniapp.py  build_paper.sh  bvh.sh  bvh_if.sh  cdr.sh  cdrPlasma.sh  (+121 more)
.github/: CODEOWNERS  pull_request_template.md
.serena/: project.yml
Applications/: AdvectionDiffusionModel.html  BrownianWalkerModel.html  CdrPlasmaModel.html  DischargeInceptionModel.html  ElectrostaticsModel.html  GeometryModel.html  ImplementedModels.html  ItoKMC.html  ItoPlasmaModel.html  MeshODEModel.html  RadiativeTransferModel.html  StreamerInceptionModel.html  TracerParticleModel.html
Base/: Acknowledgements.html  Control.html  Documentation.html  Examples.html  GettingStarted.html  Installation.html  Overview.html  Testing.html  Visualization.html
Chombo/lib/test/CCSE/facade/: GNUmakefile  Makefile.am  MakefileAm.extra  canonical.out  testFacade.cpp  testit.sh
Contrib/: CI.html  CodeStandard.html  Contributions.html  Convergence.html
Convergence/: README.md
Dev/: ARCHITECTURE.md  BENCHMARKS.md  CD_DemoParticle.H  CD_EBAMRParticleMeshSoA.H  CD_EBParticleMeshSoA.H  CD_LookupTable.H  CD_RealProxy.H  (+21 more)
(+14651 files in other folders)
